# advanced-image-processor

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat  run.bat  runloop.bat
.github/workflows/: build-check.yml  build.yml  create-github-release.yml  pull-request-build.yml
src/: algorithms.cpp  algorithms.h  handlers.cpp  handlers.h  image.cpp  image.h  image_window.cpp  image_window.h  main.cpp  models.cpp  models.h  stb_image_impl.cpp  utility.cpp  utility.h  view.cpp  view.h
